force-app/main/default/objects/tkt_Ticket_Sharing_Group__mdt/tkt_Ticket_Sharing_Group__mdt.object-meta.xml
<CustomObject>
    <description>TNOX: Maps public groups to the ticket sharing system. Non-confidential tickets are automatically shared with members of active sharing groups for team visibility.</description>
    <label>Ticket Sharing Group</label>
    <pluralLabel>Ticket Sharing Groups</pluralLabel>
</CustomObject>