force-app/main/default/objects/tkt_Ticket_Sharing_Group__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>TNOX: Admin notes about this sharing group configuration.</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>