force-app/main/default/objects/tkt_Ticket_Sharing_Group__mdt/fields/Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Group_Name__c</fullName>
    <description>TNOX: Developer Name of the Public Group to share tickets with.</description>
    <inlineHelpText>Enter the DeveloperName of the Public Group (not the display name).</inlineHelpText>
    <label>Group Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>