force-app/main/default/objects/tkt_Ticket_Sharing_Group__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>TNOX: Controls whether this sharing group configuration is active. Inactive groups will not receive shared ticket access.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>