force-app/main/default/objects/tkt_Ticket_Sharing_Group__mdt/listViews/All_Sharing_Groups.listView-meta.xml
<ListView>
    <fullName>All_Sharing_Groups</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Group_Name__c</columns>
    <columns>Is_Active__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Sharing Groups</label>
</ListView>